639 - Fix font flickering when website is loaded

--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -1,7 +1,7 @@
 /* below the fold CSS goes here */
 @import url("font-awesome.min.css");
 
-/* @font-face {
+@font-face {
   font-display: swap;
   font-family: 'Proxima Nova Rg';
   src: url('/fonts/ProximaNova-Regular.eot');
@@ -26,4 +26,4 @@
   src: url('/fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'), url('/fonts/ProximaNova-Light.woff2') format('woff2'), url('/fonts/ProximaNova-Light.woff') format('woff'), url('/fonts/ProximaNova-Light.ttf') format('truetype'), url('/fonts/ProximaNova-Light.svg#ProximaNova-Light') format('svg');
   font-weight: 300;
   font-style: normal
-} */
+}
